<resources>
    <string name="app_name">Coagmento</string>


    <string name="server_base_url">http://new.coagmento.org</string>
    <string name="socket_web_server">http://new.coagmento.org:8000</string>


    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server_host">Coagmento Host Server URL</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_keep_me_signed_in">Keep Me Signed In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_project_settings">Edit Project</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings for New Project Activity -->
    <string name="prompt_project_title">Title</string>
    <string name="prompt_project_description">Description</string>
    <string name="prompt_switch_on">Allow Others To Look At Your Project?</string>
    <string name="action_create_project">Create Project</string>

    <!-- Strings for Navigation Drawer -->
    <string name="heading_my_projects">My Projects</string>
    <string name="heading_shared_projects">Shared Projects</string>
    <string name="item_new_project">New Project</string>
    <string name="item_logout">Logout</string>

    <!-- Strings for Edit Project Form -->
    <string name="action_save_settings">Save Settings</string>
    <string name="prompt_permission">User Permission Level: </string>
    <string name="action_delete_project">Delete Project</string>
    <string name="prompt_project_user_list">Members of this project:</string>
    <string-array name="permission_set">
        <item>READ</item>
        <item>WRITE</item>
        <item>OWNER</item>
        <item>REMOVE</item>
    </string-array>
    <string name="action_add_user">Add User</string>
    <string name="edit_project_add_person_button">Add Person</string>
    <string name="edit_project_rename_button">Rename</string>
    <string name="edit_project_remove_button">Remove</string>
    <string name="edit_project_title_label">Title</string>
    <string name="edit_project_description_label">Description</string>
    <string name="edit_project_created_label">Created</string>
    <string name="edit_project_modified_label">Last Modified</string>
    <string name="edit_project_privacy_label">Access</string>
    <string name="edit_project_members_label">Project Members</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_bookmarks">Bookmarks</string>
    <string name="main_fragment_pages">Pages</string>
    <string name="main_fragment_documents">Documents</string>
    <string name="main_fragment_snippets">Snippets</string>
    <string name="prompt_no_projects_found">No projects were found under your account. \n\nPlease open the navigation drawer and create a project to start using Coagmento.</string>
    <string name="no_projects_found">No Projects Found</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_pager_demo">PagerDemoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="move">Move to Project</string>
    <string name="send_message_hint">Send a message...</string>

    <string name="prompt_no_snippets_found">No snippets were found for this project. \n\nYou can use the \'add\' button or share a link from your favorite browser to add snippets to this project.</string>
    <string name="prompt_no_bookmarks_found">No bookmarks were found for this project. \n\nUse the \'add\' button or share a link from your favorite browser to add bookmarks to this project.</string>
    <string name="prompt_no_pages_found">No pages were found for this project. \n\nAs you continue to use the app, you will find a list of your recent web and search history relevant to the project.</string>
    <string name="prompt_no_searches_found">No searches were found for this project. \n\nAs you continue to use the app, you will find a list of your recent web and search history relevant to the project.</string>
    <string name="prompt_no_documents_found">No files were found for this project. \n\nVisit the web interface to add and edit files</string>
    <string name="action_add_snippet">Save Snippet</string>
    <string name="prompt_add_url">Enter website URL</string>
    <string name="action_save_bookmark">Save Bookmark</string>
    <string name="prompt_add_user_email">Enter email for user to add...</string>
    <string name="prompt_user_permission">User Permission Level:</string>


    <string-array name="quickActions">
        <item>Bookmark</item>
        <item>Snippet</item>
    </string-array>
    <string-array name="permissions">
        <item>Read</item>
        <item>Write</item>
    </string-array>

    <!-- Settings -->>

    <string name="pref_about_title">About</string>
    <string name="version_key">pref_version</string>
    <string name="open_source_key">pref_open_source</string>
    <string name="open_source_title">Source Code</string>
    <string name="pref_attributions_title">Licenses</string>
    <string name="attributions_key">pref_attributions</string>

    <string name="ok">OK</string>
    <string name="pref_features">Beta Features</string>
    <string name="pref_title_search">Search</string>
    <string name="pref_key_search">pref_search</string>
    <string name="pref_key_chat">pref_chat</string>
    <string name="pref_title_chat">Chat</string>
    <string name="pref_key_about">pref_about</string>
    <string name="pref_title_about">About Coagmento</string>
    <string name="pref_key_team">pref_team</string>
    <string name="pref_title_team">Team</string>
    <string name="title_about_coagmento">About Coagmento</string>
    <string name="description_about_coagmento">Coagmento was originally developed in 2007 by Chirag Shah as a research project for his dissertation. It then continued taking shape in different forms as various user studies were designed around and with it. Coagmento was brought to Rutgers University, where its development was furthered by PhD student Roberto Gonzalez-Ibanez. Several other students contributed in creating different versions and functions of the system, as well as using it for research studies.</string>
    <string name="about_team"><b>Chirag Shah</b>\nAdvisor\n\n<b>Roberto Gonzalez-Ibanez</b>\nConsultant\n\n<b>Kevin Albertson</b>\nBackend Developer\n\n<b>Abdulaziz Ramos</b>\nWeb Designer\n\n<b>Yash Shah</b>\nAndroid Developer\n\n</string>
    <string name="action_setting_chat">Chat</string>
    <string name="prompt_message">Enter your message...</string>
</resources>
