<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareToProject">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/bookmarks_project_spinner"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="50dp">

            </android.support.v7.widget.AppCompatSpinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bookmarks_title_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_project_title"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bookmarks_url_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_add_url"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bookmark_description_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_project_description"
                    android:inputType="textMultiLine"
                    android:gravity="top|left"
                    android:minLines="5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/create_bookmark_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_save_bookmark"/>

        </LinearLayout>



</ScrollView>
