<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.coagmento.android.EditProject">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/edit_project_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="22dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/edit_project_buttons_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawableTop="@drawable/ic_account_plus_grey600_24dp"
                    android:drawablePadding="5sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/add_person_button"
                    android:text="@string/edit_project_add_person_button"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawableTop="@drawable/ic_pencil_box_grey600_24dp"
                    android:drawablePadding="5sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/edit_title"
                    android:text="@string/edit_project_rename_button"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawableTop="@drawable/ic_delete_grey600_24dp"
                    android:drawablePadding="5sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/remove_project"
                    android:text="@string/edit_project_remove_button"/>

            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/darker_gray"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/edit_project_title_label"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/edit_project_title_view"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/description_view"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_weight="0.75"
                    android:textColor="@android:color/darker_gray"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/edit_project_description_label"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.25"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:minLines="1"
                    android:id="@+id/edit_project_description_view"
                    />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:layout_gravity="top|left"
                    android:textColor="@android:color/darker_gray"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/edit_project_created_label"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/edit_project_created_view"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/darker_gray"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/edit_project_modified_label"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/edit_project_modified_view"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/darker_gray"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/edit_project_privacy_label"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/edit_project_privacy_view"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


            <LinearLayout
                android:id="@+id/user_member_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/edit_project_members_label"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src = "@drawable/ic_information_grey600_24dp"
                        android:clickable="true"
                        android:id="@+id/edit_project_info_button" />

                </LinearLayout>

                <!-- A RecyclerView with some commonly used attributes -->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/project_users_recycler_view"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
